<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.home.HomeScreenFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/discover_best_recipes"
                android:textColor="@color/black"
                android:textSize="25dp"
                app:fontFamily="@font/poppins_medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily=""
                        android:text="@string/a_special_pick_just_for_you_try_this_random_recipe"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:fontFamily="@font/poppins_regular" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/llRandomRecipeView"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="35dp"
                            app:cardCornerRadius="16dp"
                            app:cardElevation="0dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="180dp">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/ivRandomRecipeImage"
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:scaleType="centerCrop" />

                                <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentBottom="true"
                                    android:background="@drawable/bg_transparent_to_black"
                                    android:orientation="vertical"
                                    android:paddingHorizontal="10dp"
                                    android:paddingTop="15dp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/tvRandomRecipeName"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:fontFamily="@font/poppins_semibold"
                                        android:text=""
                                        android:textColor="@color/white"
                                        android:textSize="16sp" />
                                </androidx.appcompat.widget.LinearLayoutCompat>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmerContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="35dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="180dp"
                                android:background="@drawable/rounded_border"
                                android:backgroundTint="@color/shimmer_grey"
                                android:orientation="vertical" />
                        </com.facebook.shimmer.ShimmerFrameLayout>


                    </RelativeLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:fontFamily=""
                        android:text="@string/trending_recipes"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        app:fontFamily="@font/poppins_semibold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvTrendingRecipes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/sfTrendingRecipes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="35dp">

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@drawable/rounded_border"
                                    android:backgroundTint="@color/shimmer_grey"
                                    android:orientation="vertical" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@drawable/rounded_border"
                                    android:backgroundTint="@color/shimmer_grey"
                                    android:orientation="vertical" />
                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </com.facebook.shimmer.ShimmerFrameLayout>

                    </RelativeLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.example.chefx_android.presentation.components.ErrorStateView
                    android:id="@+id/evErrorState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />
            </RelativeLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>


</FrameLayout>